// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Binning Navigator Renders the Binning navigator component 1`] = `
<StackNavigator
  screenOptions={
    Object {
      "headerMode": "float",
      "headerStyle": Object {
        "backgroundColor": "#0071e9",
      },
      "headerTintColor": "#ffffffff",
    }
  }
>
  <Screen
    component={[Function]}
    listeners={
      Object {
        "beforeRemove": [Function],
        "blur": [Function],
      }
    }
    name="BinningHome"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.BINNING.BINNING\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="AssignLocation"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.BINNING.ASSIGN_LOCATION\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="ManagePallet"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.PALLET.MANAGE_PALLET\\" translation]",
      }
    }
  />
  <Screen
    component={[Function]}
    name="CombinePallets"
    options={
      Object {
        "headerRight": [Function],
        "headerTitle": "[missing \\"en.PALLET.COMBINE_PALLETS\\" translation]",
      }
    }
  />
</StackNavigator>
`;

exports[`Binning Navigator Renders the scanButton header icon for Binning Screen when not rightmost button 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="scanButton"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingLeft": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</TouchableOpacity>
`;

exports[`Binning Navigator Renders the scanButton header icon for Binning Screen when rightmost button 1`] = `
<TouchableOpacity
  hostRef={null}
  onPress={[Function]}
  testID="scanButton"
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flex": 1,
        "justifyContent": "center",
        "paddingHorizontal": 15,
      }
    }
  >
    <Icon
      color="#ffffffff"
      name="barcode-scan"
      size={20}
    />
  </View>
</TouchableOpacity>
`;
